--- a/style/main.css
+++ b/style/main.css
@@ -7,9 +7,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+/*Elementos base*/
 body{
   background: var(--preta);
   font-family: 'Times New Roman', Times, serif;
+  color: white;
 }
 header .container{
   display: flex;
@@ -33,4 +36,23 @@ header nav a{
 
 header nav a:hover{
   color: #fff;
+}
+
+/*filme principal*/
+
+.filme-principal{
+  font-size: 16px;
+  background: linear-gradient(rgba(0,0,0,.50), rgba(0,0,0,.50)100%), url('/img/house-capa.jpg');
+  height: 400px;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+.filme-principal .descricao{
+  margin-bottom: 40px;
+}
+.titulo{
+  font-size: 40px;
 }
