--- a/style/main.css
+++ b/style/main.css
@@ -82,3 +82,8 @@ header nav a:hover{
 .filme-principal .container{
   width: 70%;
 }
+.box-filme{
+  height: 100%;
+  width: 100%;
+  display: block;
+}
